--- a/cc/scss/components/_popups.scss
+++ b/cc/scss/components/_popups.scss
@@ -3,6 +3,7 @@
   p:first-child {
     -webkit-margin-before:0em;
     -webkit-margin-after:0em;
+    margin-bottom: 0em;
   }
 
   .pum-close {
